--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Akhtar, Deep Learning
 	<br><br>
 	
 		<ul class="social">
-		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a> , <a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
 		<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
 		</ul>
@@ -100,9 +100,9 @@ title: Akhtar, Deep Learning
 <table class="imgtable">
 <!-- paper entry-->
 
-<p> <strong>Domain Adaptation:</strong> I have been doing research related to Domain Adaptation for Object Detection.
+<p> <strong>Domain Adaptation:</strong> I have been doing research related to Domain Adaptation for Object Detection. 
 	My objective is to design the algorithm that effectively solves the problems of domain gap, where data distribution is different across the domain (source & target). 
-	Specifically, I am doing research in Unsupervised Domain Adaptation (source: labelled & target: unlabeled),
+	Specifically, I am doing research in Unsupervised Domain Adaptation (source: labelled & target: unlabeled), 
 	exploring self-training and adversarial-learning based methods.</p>
 
 	
@@ -110,26 +110,26 @@ title: Akhtar, Deep Learning
 <!-- <td> <br></td> -->
 <td>
 <p> <strong>Human Firearm Interaction Detection:</strong> I have been working on Human Object Interaction problems, leveraging firearm as object. 
-	Localizing objects in the complex scenario and associate it with right candidate (human) is a widely studied problem. 
-	This project explores the attention-based methods to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
+	Localizing objects in the complex scenario and associate it with right candidate (human) is a challenging problem. 
+	Attention-based methods are explored to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
 </td>
 </tr>
 	
 		<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
-<p> <strong>Firearm Detection:</strong> I have worked on weakly supervised object detection with application to firearms. 
+<p> <strong>Firearm Detection:</strong> : I have worked on weakly supervised object detection with application to firearms. 
 	Without using oriented bounding box, our proposed method predicts oriented bounding boxes. 
-	This method uses axis aligned boxes and angle information (easy to annotate than oriented bounding boxes) in our pipeline, 
-	and able to mitigate background noise in axis aligned boxes with the knowledge of orientation.  </p>
+	Using axis aligned boxes and angle information (easy to annotate than oriented bounding boxes) in the pipeline,
+	our method effectively mitigates background noise in axis aligned boxes. </p>
 </td>
 </tr>
 	
 			<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
-<p> <strong>Medical Image Analysis:</strong> As a semester project, this aims to predict the blindness indirectly using retinal layers images with choroidal neovascular 
-	and diabetic macular edema categories. As a third category, drusen is for vision weakness and finally, normal category is for observation sample. 
+<p> <strong>Medical Image Analysis:</strong> As a semester project, I have worked on predicting the blindness indirectly using retinal layers images with choroidal neovascular 
+	and diabetic macular edema categories. As a third category, drusen (for vision weakness) and fourth is the normal. 
 	The prediction of blindness helps for anti vascular endothelial growth factor treatment, that stops the retinal disease and make eye vision properly working. </p>
 </td>
 </tr>
@@ -243,7 +243,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <!-- Project -->
 <a id="services" class="anchor"></a>
-<h2>Services</h2>
+<h2>Services & Honors</h2>
 <table class="imgtable">
 <!-- paper entry-->
 
@@ -257,17 +257,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 	</table>
 
-<!-- Project -->
-<a id="about" class="anchor"></a>
-<h2>About</h2>
-<table class="imgtable">
-<!-- paper entry-->
 
-<p> Coming Soon... </p>
-
-	</table>
-
-<td> <br>&nbsp;</td>
 
 <!-- Project -->
 <a id="cv" class="anchor"></a>
@@ -279,6 +269,18 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 </table>
 	
+
+<td> <br>&nbsp;</td>
+
+<!-- Project -->
+<a id="about" class="anchor"></a>
+<h2>About</h2>
+<table class="imgtable">
+<!-- paper entry-->
+
+<p> Coming Soon... </p>
+
+	</table>
 
 <td> <br>&nbsp;</td>
 
