--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Akhtar, Deep Learning
 	<br><br>
 	
 		<ul class="social">
-		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a> , <a href="https://twitter.com/akhtarTalks">Twitter</a></li>
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a>, <a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
 		<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
 		</ul>
@@ -261,11 +261,11 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <!-- Project -->
 <a id="cv" class="anchor"></a>
-<h2>CV</h2>
+<h2>Curriculum Vitae (CV)</h2>
 <table class="imgtable">
 <!-- paper entry-->
 
-<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-new.pdf" class="download"> Download CV</a></p>
+<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-ITU_sep21.pdf" class="download"> Download CV</a></p>
 
 </table>
 	
