--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Akhtar, Deep Learning
 		<ul class="social">
 		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a>, <a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
-		<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
+		<li><a href="http://im.itu.edu.pk/">Research Lab (IML)</a></li>
 		</ul>
 	
 		
