--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,16 @@ title: Akhtar Munir, Deep Learning
 <div class="blurb">
 	<div class="about">
 	<h1>About Akhtar</h1>
-          <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
+          <p> 
+		  Nowadays @MBZUAI, Abu Dhabi, as Research Associate (Computer Vision). Ph.D. Student @ITU. My research interests include Object Detection, 
+		  Domain Adaptation, Uncertainty Estimation, Model Calibration and Deep Learning. Specifically, my current research works are on Unsupervised 
+		  Domain Adaptation (UDA) for Object Detection, Model Calibration and Remote Sensing. Moreover, I have worked on Oriented Object Detection and 
+		  Human-Object Interaction in complex scenarios for solutions to security surveillance.
+<!-- 		  A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
-            <a href="/about">Read more about my life...</a></p>
+            <a href="/about">Read more about my life...</a> -->
+	  </p>
   
   <ul class="contacts">
 				<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
