--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Akhtar, Deep Learning
+title: Akhtar, CV & DL
 ---
 
 <div class="blurb">
@@ -10,17 +10,21 @@ title: Akhtar, Deep Learning
 <!-- 	<div class="column"> -->
 <!-- 	<br>
 	<br> -->
-	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
+	<h2>Hi, I'm Muhammad Akhtar Munir</h2>
 <!-- 	</div> -->
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
 	<address>
-		<strong> Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
+		<strong> 
+			Research Associate (Computer Vision)</strong><br>
+		MBZUAI, Abu Dhabi<br>
+		United Arab Emirates<br><br>
+<!-- 		Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
 		Intelligent Machines Lab<br>
-		Information Technology University (ITU)<br><br>
+		Information Technology University (ITU)<br><br> -->
 		Contact Emails:<br>
-		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br>
-		<span style="color:#850E08;" class="obfuscate">its[DOT]akhtar90[AT]gmail[DOT]com</span>
+<!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
+		<span>its[DOT]akhtar90[AT]gmail[DOT]com</span>
 		</address>
 	<br><br>
 	
