--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@ title: Akhtar, CV & DL
 	<br><br>
 	
 		<ul class="social">
-		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a>, <a href="https://twitter.com/akhtarTalks">Twitter</a></li>
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a>
+			<a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
-		<li><a href="http://im.itu.edu.pk/">Research Lab (IML)</a></li>
+<!-- 		<li><a href="http://im.itu.edu.pk/">Research Lab (IML)</a></li> -->
 		</ul>
 	
 		
@@ -63,7 +64,14 @@ title: Akhtar, CV & DL
 <table class="imgtable">
 <!-- paper entry-->
 	
-	<!-- <tr> -->
+<p> <strong>Muhammad Akhtar Munir</strong>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
+	"Cal-DETR: Calibrated Detection Transformer" <strong>NeurIPS</strong> (2023).
+	[<a href="https://openreview.net/pdf?id=4SkPTD6XNP">[Paper]</a>]
+	[<a href="https://github.com/akhtarvision/cal-detr">[Code]</a>]
+</p>
+
+
+<!-- <tr> -->
 <!-- <td> <br></td> -->
 <!-- <td> -->
 <p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
