--- a/index.html
+++ b/index.html
@@ -94,32 +94,12 @@ title: Akhtar, CV & DL
 	<a href="https://im.itu.edu.pk/synergizing-domain-adaptation/">[Project Page]</a>
 </p>
 
-<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
+<p> Javed Iqbal, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	<strong>"Leveraging orientation for weakly supervised object detection with application to firearm localization"</strong>. In <strong>Neurocomputing (2021)</strong>.
 	<a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Paper]</a>
 	<a href="https://github.com/akhtarvision/orientation-aware-firearm-detection">[Code]</a>
 </p>
-	
-<!-- 
-	
-<tr>
-<!-- <td> <br></td> -->
-<td>
-<p> Abdul Basit, <strong>Muhammad Akhtar Munir</strong>, Mohsen Ali, Naoufel Werghi, and Arif Mahmood. 
-		"Localizing Firearm Carriers By Identifying Human-Object Pairs." In 2020 IEEE International Conference on Image Processing (ICIP), pp. 2031-2035. IEEE, 2020.
-            Paper available at: <a href="https://ieeexplore.ieee.org/document/9190886">[Link]</a></p>
-</td>
-</tr>
-	
-		<tr>
-<!-- <td> <br>&nbsp;</td> -->
-<td>
-<p> Asad Javed, Muhammad Fasihullah, <strong>Muhammad Akhtar Munir</strong>, Imran Usman, M. Farhan Shafique, Tariq Bashir, and Mehmood Ashraf Khan. 
-	"A new additive watermarking technique for multimodal biometric identification." Journal of Basic and Applied Scientific Research 3, no. 7 (2013): 935-942.
-            Paper available at: <a href="https://www.textroad.com/pdf/JBASR/J.%20Basic.%20Appl.%20Sci.%20Res.,%203(7)935-942,%202013.pdf">[Link]</a></p>
-</td>
-</tr> -->
-	
+
 </table>
 	
 	
