--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Akhtar, CV & DL
 <!-- 	<div class="column"> -->
 <!-- 	<br>
 	<br> -->
-	<h2>Hi, I'm Muhammad Akhtar Munir</h2>
+	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
@@ -29,9 +29,10 @@ title: Akhtar, CV & DL
 	<br><br>
 	
 		<ul class="social">
-		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a>
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
 		<li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
+		<li><a href="https://github.com/akhtarvision">GitHub</a></li>
 <!-- 		<li><a href="http://im.itu.edu.pk/">Research Lab (IML)</a></li> -->
 		</ul>
 	
@@ -64,37 +65,37 @@ title: Akhtar, CV & DL
 <table class="imgtable">
 <!-- paper entry-->
 	
-<p> <strong>Muhammad Akhtar Munir</strong>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
+<li><p> <strong>Muhammad Akhtar Munir</strong>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
 	<strong>"Cal-DETR: Calibrated Detection Transformer"</strong>. In <strong>NeurIPS (2023)</strong>.
 	<a href="https://openreview.net/pdf?id=4SkPTD6XNP">[Paper]</a>
 	<a href="https://github.com/akhtarvision/cal-detr">[Code]</a>
 </p>
 
-<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
+<li><p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Domain Adaptive Object Detection via Balancing between Self-Training and Adversarial Learning"</strong>. In <strong>IEEE TPAMI (2023)</strong>.
 	<a href="https://ieeexplore.ieee.org/document/10173487">[Paper]</a>
 	<a href="https://im.itu.edu.pk/synergizing-domain-adaptation/">[Project Page]</a>
 </p>
 
-<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Salman Khan, and Fahad Shahbaz Khan.
+<li><p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Salman Khan, and Fahad Shahbaz Khan.
 	<strong>"Bridging Precision and Confidence: A Train-Time Loss for Calibrating Object Detection"</strong>. In <strong>CVPR (2023)</strong>.
 	<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Munir_Bridging_Precision_and_Confidence_A_Train-Time_Loss_for_Calibrating_Object_CVPR_2023_paper.pdf">[Paper]</a>
 	<a href="https://github.com/akhtarvision/bpc_calibration">[Code]</a>
 </p>
 
-<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
+<li><p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Towards improving calibration in object detection under domain shift"</strong>. In <strong>NeurIPS (2022)</strong>.
 	<a href="https://openreview.net/pdf?id=a7YeDeacHpL">[Paper]</a>
 	<a href="https://github.com/akhtarvision/tcd_calib">[Code]</a>
 </p>
 
-<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
+<li><p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
 	<strong>"SSAL: Synergizing between Self-Training and Adversarial Learning for Domain Adaptive Object Detection"</strong>. In <strong>NeurIPS (2021)</strong>.
 	<a href="https://proceedings.neurips.cc/paper/2021/file/c0cccc24dd23ded67404f5e511c342b0-Paper.pdf">[Paper]</a>
 	<a href="https://im.itu.edu.pk/synergizing-domain-adaptation/">[Project Page]</a>
 </p>
 
-<p> Javed Iqbal, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
+<li><p> Javed Iqbal, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	<strong>"Leveraging orientation for weakly supervised object detection with application to firearm localization"</strong>. In <strong>Neurocomputing (2021)</strong>.
 	<a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Paper]</a>
 	<a href="https://github.com/akhtarvision/orientation-aware-firearm-detection">[Code]</a>
