--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <td> <br>&nbsp;</td>
 
-<!-- Project -->
+<!-- <!-- Project -->
 <a id="flinks" class="anchor"></a>
 <h2>Recommends</h2>
 <table class="imgtable">
@@ -305,11 +305,11 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <p> Coming Soon... </p>
 
-	</table>
+</table> -->
 	
 <td> <br>&nbsp;</td>
 
-<!-- Project -->
+<!-- <!-- Project -->
 <a id="blog" class="anchor"></a>
 <h2>Blog</h2>
 <table class="imgtable">
@@ -322,6 +322,6 @@ Bachelor of Science (BS) in Computer Engineering <br>
 </ul>
 
 	
-</table>
+</table> -->
 
 </div><!-- /.blurb -->
