--- a/index.html
+++ b/index.html
@@ -286,43 +286,10 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <td> <br>&nbsp;</td>
 
-<!-- Project -->
-<a id="about" class="anchor"></a>
-<h2>About</h2>
-<table class="imgtable">
-<!-- paper entry-->
-
-<p> Coming Soon... </p>
-
-	</table>
-
-<td> <br>&nbsp;</td>
-
-<!-- <!-- Project -->
-<a id="flinks" class="anchor"></a>
-<h2>Recommends</h2>
-<table class="imgtable">
-<!-- paper entry-->
-
-<p> Coming Soon... </p>
-
-</table> -->
-	
-<td> <br>&nbsp;</td>
-
-<!-- <!-- Project -->
-<a id="blog" class="anchor"></a>
-<h2>Blog</h2>
-<table class="imgtable">
-<!-- paper entry-->
-
-<ul class="posts">
-{% for post in site.posts %}
-<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
-
-	
-</table> -->
+<!-- <ul class="posts"> -->
+<!-- {% for post in site.posts %} -->
+<!-- <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li> -->
+<!-- {% endfor %} -->
+<!-- </ul> -->
 
 </div><!-- /.blurb -->
