--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@ title: Akhtar, CV & DL
 
 </table>
 	
-	
-	
-	<td> <br>&nbsp;</td>
+&nbsp
+&nbsp
 
 <!-- Project -->
 <a id="projects" class="anchor"></a>
