--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ title: Akhtar, CV & DL
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
 	<address>
-		<strong> 
-			Research Associate (Computer Vision)</strong><br>
+		
+		Research Associate (Computer Vision)<br>
 		MBZUAI, Abu Dhabi<br>
 		United Arab Emirates<br><br>
 <!-- 		Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
@@ -24,10 +24,9 @@ title: Akhtar, CV & DL
 		Information Technology University (ITU)<br><br> -->
 		Contact Emails:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
-		<span>its[DOT]akhtar90[AT]gmail[DOT]com</span>
+		<span>its<DOT>akhtar90<AT>gmail<DOT>com</span>
 		</address>
-	<br><br>
-	
+&nbsp
 		<ul class="social">
 		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
 		<li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
@@ -56,7 +55,7 @@ title: Akhtar, CV & DL
             <a href="#about">Read more about my life...</a> -->
 	</p>
 	
-	<td> <br>&nbsp;</td>
+	&nbsp
 
 <!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
@@ -105,7 +104,6 @@ title: Akhtar, CV & DL
 </table>
 	
 &nbsp
-&nbsp
 
 <!-- Project -->
 <a id="projects" class="anchor"></a>
@@ -117,8 +115,6 @@ title: Akhtar, CV & DL
 	My objective is to design the algorithm that effectively solves the problems of domain gap, where data distribution is different across the domain (source & target). 
 	Specifically, I am doing research in Unsupervised Domain Adaptation (source: labelled & target: unlabeled), 
 	exploring self-training and adversarial-learning based methods.</p>
-
-	
 <tr>
 <!-- <td> <br></td> -->
 <td>
@@ -127,8 +123,7 @@ title: Akhtar, CV & DL
 	Attention-based methods are explored to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
 </td>
 </tr>
-	
-		<tr>
+<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
 <p> <strong>Firearm Detection:</strong> : I have worked on weakly supervised object detection with application to firearms. 
@@ -137,8 +132,7 @@ title: Akhtar, CV & DL
 	our method effectively mitigates background noise in axis aligned boxes. </p>
 </td>
 </tr>
-	
-			<tr>
+<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
 <p> <strong>Medical Image Analysis:</strong> As a semester project, I have worked on predicting the blindness indirectly using retinal layers images with choroidal neovascular 
@@ -146,14 +140,9 @@ title: Akhtar, CV & DL
 	The prediction of blindness helps for anti vascular endothelial growth factor treatment, that stops the retinal disease and make eye vision properly working. </p>
 </td>
 </tr>
-	
 </table>
 	
-	
-	
-	
-	
-	<td> <br>&nbsp;</td>
+&nbsp
 
 <!-- Project -->
 <a id="experience" class="anchor"></a>
@@ -169,11 +158,7 @@ Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Pu
 				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
 				</ul>
 
-	</p>
-
-
-
-
+</p>
 <tr>
 <!-- <td> <br></td> -->
 <td>
@@ -186,18 +171,7 @@ Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), N
 	</p>
 </td>
 </tr>
-
-	
 </table>
-
-
-
-
-
-
-
-
-
 
 <!-- Project -->
 <a id="education" class="anchor"></a>
@@ -216,8 +190,6 @@ Doctor of Philosophy (PhD) in Computer Science <br>
 Probability & Stats</a></li>
 	</ul>
 </p>
-
-
 
 <tr>
 <!-- <td> <br></td> -->
