--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Akhtar, CV & DL
 		Information Technology University (ITU)<br><br> -->
 		Contact Emails:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
-		<span>its<DOT>akhtar90<AT>gmail<DOT>com</span>
+		<span>its&ltDOT&gtakhtar90&ltAT&gtgmail&ltDOT&gtcom</span>
 		</address>
 &nbsp
 		<ul class="social">
@@ -54,9 +54,7 @@ title: Akhtar, CV & DL
             Current research focuses on deep learning, domain adaptation, and object detection.
             <a href="#about">Read more about my life...</a> -->
 	</p>
-	
 	&nbsp
-
 <!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
 <a id="publications" class="anchor"></a>
