--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Akhtar, CV & DL
 <!-- 		Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br> -->
-		Contact Emails:<br>
+		Contact Email:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
 		<span>its&ltDOT&gtakhtar90&ltAT&gtgmail&ltDOT&gtcom</span>
 		</address>
@@ -54,7 +54,7 @@ title: Akhtar, CV & DL
             Current research focuses on deep learning, domain adaptation, and object detection.
             <a href="#about">Read more about my life...</a> -->
 	</p>
-	&nbsp
+	<br><br>
 <!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
 <a id="publications" class="anchor"></a>
