--- a/index.html
+++ b/index.html
@@ -106,13 +106,48 @@ title: Akhtar, CV & DL
 <!-- paper entry-->
 
 <p> 
-Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Punjab, Lahore, Pakistan.
+Research Associate at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE.
+	 <ul class="contacts">
+				<li>Duration: July 2023 – Present</li>
+				<li>Association: Computer Vision Department</li>
+				<li>PIs:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan & 
+					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
+				</ul>
+</p>
+<tr>
+<!-- <td> <br></td> -->
+<td>
+	<p> 
+Research Intern at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE.
+	 <ul class="contacts">
+				<li>Duration: August 2022 – June 2023</li>
+				<li>Association: Computer Vision Department</li>
+				<li>PIs:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan & 
+					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
+				</ul>
+</p>
+<tr>
+<!-- <td> <br></td> -->
+<td>
+	<p> 
+Ph.D. Fellow at Information Technology University (ITU), Lahore, Pakistan.
 	 <ul class="contacts">
 				<li>Duration: September 2017 – Present</li>
 				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
 				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
 				</ul>
-
+</p>
+<tr>
+<!-- <td> <br></td> -->
+<td>
+	
+	<p> 
+Ph.D. Fellow at Information Technology University (ITU), Lahore, Pakistan.
+	 <ul class="contacts">
+				<li>Duration: September 2017 – Present</li>
+				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
+				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
+				</ul>
 </p>
 <tr>
 <!-- <td> <br></td> -->
@@ -126,6 +161,7 @@ Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), N
 	</p>
 </td>
 </tr>
+
 </table>
 
 <!-- Project -->
