--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ Research Associate at Mohamed bin Zayed University of Artificial Intelligence (M
 	 <ul class="contacts">
 				<li>Duration: July 2023 – Present</li>
 				<li>Association: Computer Vision Department</li>
-				<li>PIs:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan & 
+				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan 
+					& 
 					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
@@ -122,7 +123,8 @@ Research Intern at Mohamed bin Zayed University of Artificial Intelligence (MBZU
 	 <ul class="contacts">
 				<li>Duration: August 2022 – June 2023</li>
 				<li>Association: Computer Vision Department</li>
-				<li>PIs:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan & 
+				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan 
+					& 
 					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
@@ -133,8 +135,8 @@ Research Intern at Mohamed bin Zayed University of Artificial Intelligence (MBZU
 Ph.D. Fellow at Information Technology University (ITU), Lahore, Pakistan.
 	 <ul class="contacts">
 				<li>Duration: September 2017 – Present</li>
-				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
-				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
+				<li>Association: Intelligent Machines Lab, ITU</li>
+				<li>Advisor: <a href="http://im.itu.edu.pk/people/">Dr. Mohsen Ali</a></li>
 				</ul>
 </p>
 <tr>
