--- a/index.html
+++ b/index.html
@@ -124,36 +124,38 @@ Research Intern at Mohamed bin Zayed University of Artificial Intelligence (MBZU
 				<li>Duration: August 2022 – June 2023</li>
 				<li>Association: Computer Vision Department</li>
 				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan 
-					& 
+					<b>&</b>b> 
 					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
+
+	<tr>
+<!-- <td> <br></td> -->
+<td>
+	<p> 
+Research Associate at Information Technology University (ITU), Lahore, Pakistan
+	 <ul class="contacts">
+				<li>Duration: January 2022 – July 2022</li>
+				<li>Association: Under Google Research Scholar Award, ITU</li>
+				<li>PI:<a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en"> Dr. Mohsen Ali 
+				</ul>
+</p>
+	
 <tr>
 <!-- <td> <br></td> -->
 <td>
 	<p> 
-Ph.D. Fellow at Information Technology University (ITU), Lahore, Pakistan.
+Ph.D. Fellow (Student) at Information Technology University (ITU), Lahore, Pakistan.
 	 <ul class="contacts">
 				<li>Duration: September 2017 – Present</li>
 				<li>Association: Intelligent Machines Lab, ITU</li>
-				<li>Advisor: <a href="http://im.itu.edu.pk/people/">Dr. Mohsen Ali</a></li>
+				<li>Advisor: <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en">Dr. Mohsen Ali</a></li>
 				</ul>
 </p>
 <tr>
 <!-- <td> <br></td> -->
 <td>
-	
-	<p> 
-Ph.D. Fellow at Information Technology University (ITU), Lahore, Pakistan.
-	 <ul class="contacts">
-				<li>Duration: September 2017 – Present</li>
-				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
-				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
-				</ul>
-</p>
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> 
 Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan.
 	 <ul class="contacts">
