--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@ Research Associate at Mohamed bin Zayed University of Artificial Intelligence (M
 	 <ul class="contacts">
 				<li>Duration: July 2023 – Present</li>
 				<li>Association: Computer Vision Department</li>
-				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan 
-					& 
+				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan,
 					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
@@ -123,8 +122,7 @@ Research Intern at Mohamed bin Zayed University of Artificial Intelligence (MBZU
 	 <ul class="contacts">
 				<li>Duration: August 2022 – June 2023</li>
 				<li>Association: Computer Vision Department</li>
-				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan 
-					<b>&</b>b> 
+				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan,
 					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
@@ -157,7 +155,7 @@ Ph.D. Fellow (Student) at Information Technology University (ITU), Lahore, Pakis
 <td>
 
 <p> 
-Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan.
+Lab Engineer at School of EE and CS (SEECS), NUST, Islamabad, Pakistan.
 	 <ul class="contacts">
 				<li>Duration: November 2013 – September 2017</li>
 				<li>Association: Department of Computing, SEECS, NUST</li>
