--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@ Doctor of Philosophy (PhD) in Computer Science <br>
 	<strong>Thesis (in Progress): Domain Adaptation for Object Detection</strong>
 	<ul class="contacts">
 				<li>September 2017 - Present</li>
-<!-- 				<li>CGPA: 3.50/4.0 (Coursework)</li> -->
 				<li>Major Courses: Deep Learning, Computer Vision, Machine Learning, Pattern Recognition,
 Probability & Stats</a></li>
 	</ul>
@@ -193,7 +192,6 @@ Master of Science (MS) in Computer Science <br>
 	<strong>Thesis: Ischemic Stroke Lesion Segmentation in MR Sequences Using MLP and SVM</strong>
 	<ul class="contacts">
 				<li>February 2015 - June 2017</li>
-<!-- 				<li>CGPA: 3.84/4.0</li> -->
 				<li>Major Courses: Artificial Intelligence, Digital Image Processing, Algorithms Analysis</a></li>
 	</ul>
 </p>
@@ -209,7 +207,6 @@ Bachelor of Science (BS) in Computer Engineering <br>
 	<strong>Final Year Project: Digital Watermarking in Multimodal Biometrics Domain</strong>
 	<ul class="contacts">
 				<li>February 2009 - January 2013</li>
-<!-- 				<li>CGPA: 3.38/4.0</li> -->
 				<li>Major Courses: Data Structures and Algorithms, Operating Systems, Numerical Computations</a></li>
 	</ul>
 </p>
@@ -226,9 +223,10 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <!-- paper entry-->
 
 <ul>
-  <li>Reviewer in ACM Multimedia 2021 Conference</li>
+  <li>Reviewer: CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM Multimedia 2021</li>
+<li>Scholarship: Awardee: NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
   <li>Scholarship: PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
-  <li>Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021: <a href="https://drive.google.com/file/u/2/d/14v6LukMF6j8rmwnrY_Os2BlUm1cXGlVi/view">CERTIFICATE</a></li>
+  <li>Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021</li>
 </ul>
 <p>Eastern European Machine Learning (EEML) is a one-week summer school focused on machine learning and artificial intelligence</p>
 
