--- a/index.html
+++ b/index.html
@@ -223,13 +223,11 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <!-- paper entry-->
 
 <ul>
-  <li>Reviewer: CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM Multimedia 2021</li>
-<li>Scholarship: Awardee: NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
-  <li>Scholarship: PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
-  <li>Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021</li>
+  <li><strong>Reviewer:</strong>strong> CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM Multimedia 2021</li>
+<li><strong>Awardee:</strong>strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
+  <li><strong>Scholarship:</strong>strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
+  <li><strong>Summer School:</strong> EEML Summer School, Virtual Budapest, Hungary, 2021</li>
 </ul>
-<p>Eastern European Machine Learning (EEML) is a one-week summer school focused on machine learning and artificial intelligence</p>
-
 
 	</table>
 
@@ -241,8 +239,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <table class="imgtable">
 <!-- paper entry-->
 
-<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-ITU_sep21.pdf" class="download"> Download CV</a></p>
-
+<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/blob/main/CV-Akhtar_D23.pdf" class="download"> Download CV</a></p>
 </table>
 	
 
