--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <!-- paper entry-->
 
 <ul>
-  <li><strong>Reviewer:</strong>strong> CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM Multimedia 2021</li>
-<li><strong>Awardee:</strong>strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
-  <li><strong>Scholarship:</strong>strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
-  <li><strong>Summer School:</strong> EEML Summer School, Virtual Budapest, Hungary, 2021</li>
+  <li><p><strong>Reviewer:</strong> CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM MM 2021<p></li>
+<li><p><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award<p></li>
+  <li><p><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan<p></li>
+  <li><p><strong>Summer School:</strong> EEML Summer School, Virtual Budapest, Hungary, 2021<p></li>
 </ul>
 
 	</table>
