--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Akhtar, CV & DL
 	<br> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
-	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
+	      	<img class="roundImg" src="1702601702642.jpg" alt="profile" width="188" height="170" style="float:right">
+<!-- 		<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right"> -->
 
 	<address>
 		
