--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Akhtar, CV & DL
 	<br> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
-	      	<img class="roundImg" src="1702601702642.jpg" alt="profile" width="180" height="170" style="float:right">
+	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="180" height="170" style="float:right">
+<!-- 		<img class="roundImg" src="1702601702642.jpg" alt="profile" width="180" height="170" style="float:right"> -->
 <!-- 		<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right"> -->
 
 	<address>
@@ -25,7 +26,7 @@ title: Akhtar, CV & DL
 		Information Technology University (ITU)<br><br> -->
 		Contact Email:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
-		<span>its&ltDOT&gtakhtar90&ltAT&gtgmail&ltDOT&gtcom</span>
+		<span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span>
 		</address>
 &nbsp
 		<ul class="social">
@@ -44,14 +45,14 @@ title: Akhtar, CV & DL
 <!-- 	</div> -->
 	
           <p> 
-		  Nowadays @MBZUAI, Abu Dhabi, as Research Associate (Computer Vision). 
+		  Nowadays @MBZUAI, Abu Dhabi, as a Research Associate (Computer Vision). 
 		  Ph.D. Student @ITU. My research interests include Object Detection, Domain Adaptation, 
-		  Uncertainty Estimation, Model Calibration and Deep Learning. Specifically, 
+		  Uncertainty Estimation, Model Calibration, and Deep Learning. Specifically, 
 		  my current research works are on Unsupervised Domain Adaptation (UDA) for 
-		  Object Detection, Model Calibration and Remote Sensing. Moreover, I have worked on 
+		  Object Detection, Model Calibration, and Remote Sensing. Moreover, I have worked on 
 		  Oriented Object Detection and Human-Object Interaction in complex scenarios for solutions to security surveillance.
-<!-- 		  A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
-            Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
+<!-- 		  A <em>self-motivated Ph.D. research fellow</em> with a wide background in computer science, research, and development. 
+            Hands-on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
             <a href="#about">Read more about my life...</a> -->
 	</p>
@@ -62,6 +63,12 @@ title: Akhtar, CV & DL
 <table class="imgtable">
 <!-- paper entry-->
 <ul>
+<li><p> Sohail Danish, Muhammad Haris Khan, <strong>Muhammad Akhtar Munir</strong>, Saquib Sarfraz, and Mohsen Ali.
+	<strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. In <strong>CVPR (2024)</strong>.
+	<a href="https://akhtarvision.github.io/">[Paper (coming soon)]</a>
+	<a href="https://akhtarvision.github.io/">[Code (coming soon)]</a>
+</p></li>
+	
 <li><p> <strong>Muhammad Akhtar Munir</strong>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
 	<strong>"Cal-DETR: Calibrated Detection Transformer"</strong>. In <strong>NeurIPS (2023)</strong>.
 	<a href="https://openreview.net/pdf?id=4SkPTD6XNP">[Paper]</a>
@@ -176,7 +183,7 @@ Lab Engineer at School of EE and CS (SEECS), NUST, Islamabad, Pakistan.
 <p> 
 Doctor of Philosophy (PhD) in Computer Science <br>
 	Information Technology University, Lahore<br>
-	<strong>Thesis (in Progress): Domain Adaptation for Object Detection</strong>
+	<strong>Thesis (submitted): Domain Adaptation for Object Detection</strong>
 	<ul class="contacts">
 				<li>September 2017 - Present</li>
 				<li>Major Courses: Deep Learning, Computer Vision, Machine Learning, Pattern Recognition,
