--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@ title: Akhtar, CV & DL
 <!-- 	</div> -->
 	
           <p> 
-		  Nowadays @MBZUAI, Abu Dhabi, as a Research Associate (Computer Vision). 
+		  Welcome! I am currently a Research Associate (Computer Vision) @MBZUAI in Abu Dhabi. Simultaneously, I am pursuing my Ph.D. at ITU. My research focuses 
+		  on a variety of areas, including Object Detection, Domain Adaptation, Uncertainty Estimation, and Model Calibration. 
+		  My current research centering on Domain Adaptation & Generalization, Model Calibration, Weather Modeling, and Remote Sensing. 
+<!-- 		  Nowadays @MBZUAI, Abu Dhabi, as a Research Associate (Computer Vision). 
 		  Ph.D. Student @ITU. My research interests include Object Detection, Domain Adaptation, 
 		  Uncertainty Estimation, Model Calibration, and Deep Learning. Specifically, 
 		  my current research works are on Unsupervised Domain Adaptation (UDA) for 
 		  Object Detection, Model Calibration, and Remote Sensing. Moreover, I have worked on 
-		  Oriented Object Detection and Human-Object Interaction in complex scenarios for solutions to security surveillance.
+		  Oriented Object Detection and Human-Object Interaction in complex scenarios for solutions to security surveillance. -->
 <!-- 		  A <em>self-motivated Ph.D. research fellow</em> with a wide background in computer science, research, and development. 
             Hands-on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
