--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Akhtar, CV & DL
 	<br> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
-	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="190" height="170" style="float:right">
+	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="190" height="160" style="float:right">
 <!-- 		<img class="roundImg" src="1702601702642.jpg" alt="profile" width="180" height="170" style="float:right"> -->
 <!-- 		<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right"> -->
 
@@ -68,8 +68,8 @@ title: Akhtar, CV & DL
 <ul>
 <li><p> Sohail Danish, Muhammad Haris Khan, <strong>Muhammad Akhtar Munir</strong>, Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. In <strong>CVPR (2024)</strong>.
-	<a href="https://akhtarvision.github.io/">[Paper (coming soon)]</a>
-	<a href="https://akhtarvision.github.io/">[Code (coming soon)]</a>
+	<a href="https://akhtarvision.github.io/">[Paper & Code (coming soon)]</a>
+<!-- 	<a href="https://akhtarvision.github.io/">[Code (coming soon)]</a> -->
 </p></li>
 	
 <li><p> <strong>Muhammad Akhtar Munir</strong>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
