--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ title: Akhtar, CV & DL
 <table class="imgtable">
 <!-- paper entry-->
 <ul>
-<li><p> Sohail Danish, Muhammad Haris Khan, <strong>Muhammad Akhtar Munir</strong>, Saquib Sarfraz, and Mohsen Ali.
+<li><p> Sohail Danish, Muhammad Haris Khan, <b><i>Muhammad Akhtar Munir</i></b>, Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. In <strong>CVPR (2024)</strong>.
 	<a href="https://akhtarvision.github.io/">[Paper & Code (coming soon)]</a>
 <!-- 	<a href="https://akhtarvision.github.io/">[Code (coming soon)]</a> -->
