--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <table class="imgtable">
 <!-- paper entry-->
 
-<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/blob/main/CV-Akhtar_D23.pdf" class="download"> Download CV</a></p>
+<p> Download CV as PDF: <a href="CV-Akhtar_M24.pdf" class="download"> Download CV</a></p>
 </table>
 	
 
