--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: Akhtar, CV & DL
 		Contact Email:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
 		<span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span>
+		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
 		</address>
 &nbsp
 		<ul class="social">
