--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Akhtar, CV & DL
 		Information Technology University (ITU)<br><br> -->
 		Contact Email:<br>
 <!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
-		<span>its <p>&ltdot&gt</p> akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
+		<span>its <text>&ltdot&gt</text> akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
 		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
 		</address>
 &nbsp
