--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Akhtar, CV & DL
 <!-- 	<div class="column"> -->
 <!-- 	<br>
 	<br> -->
-	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
+	<h1>Hi, I'm Akhtar</h1>
 <!-- 	</div> -->
-	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="190" height="160" style="float:right">
+	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:right">
 <!-- 		<img class="roundImg" src="1702601702642.jpg" alt="profile" width="180" height="170" style="float:right"> -->
 <!-- 		<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right"> -->
 
@@ -46,20 +46,9 @@ title: Akhtar, CV & DL
 <!-- 	</div> -->
 	
           <p> 
-		  Welcome! I am currently a Research Associate (Computer Vision) @MBZUAI in Abu Dhabi. Simultaneously, I am pursuing my Ph.D. at ITU. My research focuses 
-		  on a variety of areas, including Object Detection, Domain Adaptation, Uncertainty Estimation, and Model Calibration. 
-		  My current research centering on Domain Adaptation & Generalization, Model Calibration, Weather Modeling, and Remote Sensing. 
-<!-- 		  Nowadays @MBZUAI, Abu Dhabi, as a Research Associate (Computer Vision). 
-		  Ph.D. Student @ITU. My research interests include Object Detection, Domain Adaptation, 
-		  Uncertainty Estimation, Model Calibration, and Deep Learning. Specifically, 
-		  my current research works are on Unsupervised Domain Adaptation (UDA) for 
-		  Object Detection, Model Calibration, and Remote Sensing. Moreover, I have worked on 
-		  Oriented Object Detection and Human-Object Interaction in complex scenarios for solutions to security surveillance. -->
-<!-- 		  A <em>self-motivated Ph.D. research fellow</em> with a wide background in computer science, research, and development. 
-            Hands-on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
-            Current research focuses on deep learning, domain adaptation, and object detection.
-            <a href="#about">Read more about my life...</a> -->
-	</p>
+		  I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
+		  Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
+	  </p>
 
 <!-- Project -->
 <a id="publications" class="anchor"></a>
@@ -69,8 +58,8 @@ title: Akhtar, CV & DL
 <ul>
 <li><p> Sohail Danish, Muhammad Haris Khan, <b><i>Muhammad Akhtar Munir</i></b>, Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. In <strong>CVPR (2024)</strong>.
-	<a href="https://akhtarvision.github.io/">[Paper & Code (coming soon)]</a>
-<!-- 	<a href="https://akhtarvision.github.io/">[Code (coming soon)]</a> -->
+	<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Danish_Improving_Single_Domain-Generalized_Object_Detection_A_Focus_on_Diversification_and_CVPR_2024_paper.pdf">[Paper]</a>
+	<a href="https://github.com/msohaildanish/DivAlign">[Code]</a>
 </p></li>
 	
 <li><p> <b><i>Muhammad Akhtar Munir</i></b>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.
@@ -123,7 +112,7 @@ Research Associate at Mohamed bin Zayed University of Artificial Intelligence (M
 				<li>Duration: July 2023 – Present</li>
 				<li>Association: Computer Vision Department</li>
 				<li>Advisors:<a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ"> Dr. Salman Khan,
-					<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
+				<a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en"> Dr. Fahad S Khan</a></li>
 				</ul>
 </p>
 <tr>
@@ -227,7 +216,6 @@ Bachelor of Science (BS) in Computer Engineering <br>
 	
 </table>
 
-
 <!-- Project -->
 <a id="services" class="anchor"></a>
 <h2>Services & Honors</h2>
@@ -241,9 +229,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
   <li><p><strong>Summer School:</strong> EEML Summer School, Virtual Budapest, Hungary, 2021<p></li>
 </ul>
 
-	</table>
-
-
+</table>
 
 <!-- Project -->
 <a id="cv" class="anchor"></a>
@@ -254,7 +240,6 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <p> Download CV as PDF: <a href="CV-Akhtar_M24.pdf" class="download"> Download CV</a></p>
 </table>
 	
-
 <td> <br>&nbsp;</td>
 
 <!-- <ul class="posts"> -->
